# comic-translate

./: .dockerignore  .env.example  .gitignore  .graphify_detect_pipeline.json  AGENTS.md  API_README.md  CLAUDE.md  CODE_REVIEW.md  CTkif.bat  ChangeLog.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  Text Document.json  app.py  builddmg.sh  comic.py  contabo-deploy.sh  controller.py  ct-mac.spec  docker-compose.yml  download_models.py  main.py  manga_translation_system_plan.md  ocr.bat  pipeline.py  pyinstaller_rth_numpy_compat.py  pyinstaller_rth_photoshopapi.py  pyproject.toml  qwen35.bat  requirements-dev.txt  requirements-qwen.txt  requirements-server.txt  requirements.txt  run_server.py  server.py  start_comic.bat  translate  untitled2.ctpr  (+1 more)
.claude/: settings.local.json
.codex/: config.toml  hooks.json
app/: archives.py  callbacks.py  icon_resource.py  path_materialization.py  shortcuts.py  state_manager.py  thread_worker.py  update_checker.py
comic-translate-2.7.1/: main.py  requirements.txt
config/: __init__.py  prompts.json  settings.py
docs/: README_fr.md  README_ja.md  README_ko.md  README_pt-BR.md  README_vi.md  README_zh-CN.md  README_zh-TW.md
fast-api/: README.md  __init__.py  example_web_client.html  run_server.py
graphify-out/: .graphify_detect.json  .query_show_inpainting.txt  GRAPH_REPORT.md  cost.json  graph.html  manifest.json
imkit/: __init__.py  analysis.py  io.py  morphology.py  transforms.py  utils.py
models/: .gitignore
modules/: batch_processor.py  detection.py  maga_settings.py  multi_process_block.py  save_renderer.py  translator.py
pipeline/: batch_base.py  batch_execution_mixin.py  batch_processor.py  batch_render_mixin.py  batch_state_mixin.py  block_detection.py  cache_manager.py  cache_v2.py  comic_glossary.py  comic_session.py  discovery_pass.py  inpainting.py  inpainting_boxes.py  invalidation_policy.py  main_pipeline.py  ocr_handler.py  page_state.py  render_state.py  segmentation_handler.py  sfx_classifier.py  stage_state.py  story_context.py  translation_context.py  translation_handler.py  virtual_page.py  webtoon_batch_processor.py  webtoon_utils.py
schemas/: __init__.py  style_state.py
services/: __init__.py
templates/: upload.html
tests/: test_adaptive_color.py  test_app.py  test_architecture_smoke.py  test_auto_style.py  (+19 more)
(+613 files in other folders)
