[project]
name = "comic-translate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mahotas>=1.4.18",
    "pillow>=11.0.0",
    "numpy>=2.2.6",
    "setuptools",
    "PySide6>=6.8.0",
    "msgpack>=1.1.0",
    "requests>=2.31.0",
    "pdfplumber>=0.11.5",
    "py7zr>=0.20.8",
    "rarfile>=4.1",
    "img2pdf>=0.5.1",
    "azure-ai-vision-imageanalysis>=1.0.0b1",
    "deepl>=1.16.1",
    "keyring>=25.7.0",
    "jieba>=0.42.1",
    "janome>=0.5.0",
    "pythainlp>=5.1.2",
    "jaconv>=0.3.4",
    "wget>=3.2",
    "onnxruntime>=1.22.1",
    "shapely>=2.1.1",
    "pyclipper>=1.3.0.post6",
    "six>=1.16.0",
    "openai",
    "imagehash>=4.3",
    "PhotoshopAPI>=0.9.0",
    "send2trash>=2.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  ".",
  "packages/core/src",
  "packages/qa/src",
  "packages/detection/src",
  "packages/ocr/src",
  "packages/translation/src",
  "packages/rendering/src",
  "packages/cli/src",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[dependency-groups]
dev = [
    "aiosqlite>=0.19",
    "asyncpg>=0.29",
    "pgvector>=0.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23",
    "sqlalchemy[asyncio]>=2.0",
]
